# amber

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
experiments/2d/: CMakeLists.txt
experiments/2d/character/: CMakeLists.txt  main.cpp
experiments/2d/fruits/: CMakeLists.txt  main.cpp
experiments/2d/imgviewer/: CMakeLists.txt  main.cpp
experiments/2d/mario/: CMakeLists.txt  main.cpp
include/: Pixel.h  Texture.h  Vector.h  Viewport.h  Window.h
include/ADT/: Array.h
include/Graphics/: Image.h  Model.h  Pixel.h  Texture.h  Viewport.h
include/Math/: Vector.h
include/Physics/: Body.h  Force.h
lib/: CMakeLists.txt  Image.cpp
samples/2d/: CMakeLists.txt
samples/2d/flappy/: CMakeLists.txt  main.cpp
samples/2d/imgviewer/: main.cpp
unittest/: ArrayTest.cpp  CMakeLists.txt  Makefile  UnitTests.cpp  VectorTest.cpp
